<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.picfinder.app.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/foldersFragment"
        android:name="com.picfinder.app.ui.folders.FoldersFragment"
        android:label="@string/folders"
        tools:layout="@layout/fragment_folders" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.picfinder.app.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>